<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    tools:context=".MainActivity"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/konversi_waktu"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#006600"
        android:lines="5"
        />
    <TextView
        android:id="@+id/detik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/_1_detik"
        android:textStyle="bold"
        android:lines="2"
        android:layout_alignParentLeft="true"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/go1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/go1"
        android:textSize="20sp"
        android:textColor="#006600"
        />
    <TextView
        android:id="@+id/menit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detik"
        android:text="@string/_2_menit"
        android:textStyle="bold"
        android:lines="2"
        android:layout_alignParentLeft="true"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/go2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detik"
        android:layout_centerHorizontal="true"
        android:text="@string/go2"
        android:textSize="20sp"
        android:textColor="#006600"
        />
    <TextView
        android:id="@+id/jam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menit"
        android:text="@string/_3_jam"
        android:textStyle="bold"
        android:lines="2"
        android:layout_alignParentLeft="true"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/go3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menit"
        android:layout_centerHorizontal="true"
        android:text="@string/go3"
        android:textSize="20sp"
        android:textColor="#006600"
        />

    <Button
        android:id="@+id/go4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/jam"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="115dp"
        android:text="@string/tentang_kami"
        android:textColor="#006600"
        android:textSize="18sp" />

</RelativeLayout>