<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    tools:context=".Main3Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waktu2"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menit2"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/edt_menit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:id="@+id/edt_hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung2"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detik2"
        android:gravity="center"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/edt_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jam2"
        android:gravity="center"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/edt_hasil2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/clock"
        />
</LinearLayout>